[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/pricedown bl.otf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer"]
margin_left = 395.0
margin_right = 628.0
margin_bottom = 39.0

[node name="EnemiesLabel" type="Label" parent="Control/CenterContainer/HBoxContainer"]
margin_right = 137.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Enemigos:"

[node name="CountEnemiesL" type="Label" parent="Control/CenterContainer/HBoxContainer"]
margin_left = 141.0
margin_right = 233.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "XX / XX"

[node name="CenterContainer2" type="CenterContainer" parent="Control"]
anchor_right = 1.0
margin_left = 7.0
margin_top = 34.0
margin_right = 7.0
margin_bottom = 73.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer2"]
margin_left = 456.0
margin_top = 7.0
margin_right = 568.0
margin_bottom = 31.0

[node name="Vidas" type="Label" parent="Control/CenterContainer2/HBoxContainer"]
margin_right = 52.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "Vidas:"

[node name="CountVidas" type="Label" parent="Control/CenterContainer2/HBoxContainer"]
margin_left = 56.0
margin_right = 112.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "XX / XX"
